changed html layout to make the file more readable and easier to work with before logic

--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@
     background-color: rgb(167, 3, 3);
 }
 
-.image {
-    
+.player {
+    float: left;
+}
+
+.player.two{
+    margin-left: 100px;
 }
